# -byteorder

./: CMakeLists.txt
include/COMiC/: byteorder.h
src/: convert.c
